[package]
name = "image-clustering"
version = "0.1.0"
authors = ["Lando <lando.schumpich@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.17.0"
image = "0.23.7"
num = "0.3.0"

[dev-dependencies]
rand = "*"